package com.novaperutech.veyra.platform.hcm.domain.model.valueobjetcs;

import jakarta.persistence.Embeddable;

@Embeddable
public record PersonProfileId(Long id) {
}
