package com.novaperutech.veyra.platform.nursing.application.internal.queryservices;

import com.novaperutech.veyra.platform.nursing.domain.model.aggregates.Resident;
import com.novaperutech.veyra.platform.nursing.domain.model.queries.*;
import com.novaperutech.veyra.platform.nursing.domain.model.valueobjects.ResidentState;
import com.novaperutech.veyra.platform.nursing.domain.services.ResidentQueryServices;
import com.novaperutech.veyra.platform.nursing.infrastructure.persistence.jpa.repositories.ResidentRepository;
import org.springframework.stereotype.Service;

import java.util.List;
import java.util.Optional;
@Service
public class ResidentQueryServiceImpl implements ResidentQueryServices {
    private final ResidentRepository residentRepository;

    public ResidentQueryServiceImpl(ResidentRepository residentRepository) {
        this.residentRepository = residentRepository;
    }

    @Override
    public List<Resident> handle(GetAllResidentsByNursingHomeIdQuery query) {
        return residentRepository.findAllByNursingHomeId(query.nursingHomeId());
    }

    @Override
    public Optional<Resident> handle(GetResidentByIdQuery query) {
        return residentRepository.findById(query.id());
    }

    @Override
    public Optional<Resident> handle(GetResidentByPersonProfileQuery query) {
        return residentRepository.findByPersonProfileId(query.id());
    }

    @Override
    public List<Resident> handle(GetActiveResidentsByNursingHomeId query) {
        return residentRepository.findByNursingHomeIdAndResidentStatus(query.nursingHomeId(), ResidentState.ACTIVE);
    }


    @Override
    public boolean handle(ExistsByResidentIdQuery query) {
   return residentRepository.existsById(query.residentId());

    }


}
