package com.novaperutech.veyra.platform.nursing.domain.model.queries;

import com.novaperutech.veyra.platform.nursing.domain.model.valueobjetcs.PersonProfileId;

public record GetResidentByPersonProfileQuery(PersonProfileId id) {
}
