package com.novaperutech.veyra.platform.residents.domain.model.commands;

public record DeleteResidentCommand(Long id) {}
