package com.novaperutech.veyra.platform.residents.domain.model.queries;

public record GetAllResidentsQuery() {}
