@startuml
title Nursing Bounded Context
top to bottom direction
skinparam packageStyle Rectangle
skinparam linetype ortho
skinparam classAttributeIconSize 0
scale 1400 height

package "Nursing Bounded Context" {

  package "domain" {

    package "services" {
      interface ResidentCommandServices {
        +handle(CreateResidentCommand): Optional<Resident>
        +handle(UpdateResidentCommand): Optional<Resident>
        +handle(DeleteResidentCommand): void
      }
      interface ResidentQueryServices {
        +handle(GetAllResidentsQuery): List<Resident>
        +handle(GetResidentByIdQuery): Optional<Resident>
        +handle(GetResidentByPersonProfileQuery): Optional<Resident>
      }
    }

    package "model" {

      package "aggregates" {
        class Resident {
          - id: Long
          - personProfileId: PersonProfileId
          - emergencyContact: EmergencyContact
          - legalRepresentative: LegalRepresentative
          + Resident()
          + Resident(CreateResidentCommand)
          + update(UpdateResidentCommand): void
        }
      }

      package "commands" {
        class CreateResidentCommand {
          + personProfileId: Long
          + emergencyContact: String
          + legalRepresentative: String
        }
        class UpdateResidentCommand {
          + id: Long
          + emergencyContact: String
          + legalRepresentative: String
        }
        class DeleteResidentCommand {
          + id: Long
        }
      }

      package "queries" {
        class GetAllResidentsQuery
        class GetResidentByIdQuery {
          + id: Long
        }
        class GetResidentByPersonProfileQuery {
          + personProfileId: Long
        }
      }

      package "valueobjects" {
        class PersonProfileId <<VO>> {
          + value: Long
        }
        class EmergencyContact <<VO>> {
          + fullName: String
          + phoneNumber: String
        }
        class LegalRepresentative <<VO>> {
          + fullName: String
          + phoneNumber: String
        }
      }
    }
  }

  package "application.internal" {

    package "outboundservices.acl" {
      ' Adaptador hacia Profiles BC (puerto de salida)
      class ExternalProfileService {
        + existsPersonProfile(personProfileId: Long): boolean
        ' (o: +getPersonProfile(personProfileId: Long): Optional<ProfileResource>)
      }
    }

    package "commandservices" {
      class ResidentCommandServiceImpl {
        - residentRepository: ResidentRepository
        - externalProfileService: ExternalProfileService
        + handle(CreateResidentCommand): Optional<Resident>
        + handle(UpdateResidentCommand): Optional<Resident>
        + handle(DeleteResidentCommand): void
      }
    }

    package "queryservices" {
      class ResidentQueryCommandImpl {
        - residentRepository: ResidentRepository
        + handle(GetAllResidentsQuery): List<Resident>
        + handle(GetResidentByIdQuery): Optional<Resident>
        + handle(GetResidentByPersonProfileQuery): Optional<Resident>
      }
    }
  }

  package "infrastructure.persistence.jpa.repositories" {
    interface ResidentRepository {
      + findAll(): List<Resident>
      + findById(Long): Optional<Resident>
      + findByPersonProfileId(PersonProfileId): Optional<Resident>
      + existsByPersonProfileId(PersonProfileId): boolean
      + save(Resident): Resident
      + deleteById(Long): void
    }
  }

  package "interfaces.rest" {

    package "resources" {
      class ResidentResource {
        + id: Long
        + personProfileId: Long
        + emergencyContact: String
        + legalRepresentative: String
      }
      class CreateResidentResource {
        + personProfileId: Long
        + emergencyContact: String
        + legalRepresentative: String
      }
      class UpdateResidentResource {
        + emergencyContact: String
        + legalRepresentative: String
      }
    }

    package "transform" {
      class ResidentResourceFromEntityAssembler {
        + toResourceFromEntity(entity: Resident): ResidentResource {static}
      }
      class CreateResidentCommandFromResourceAssembler {
        + toCommandFromResource(resource: CreateResidentResource): CreateResidentCommand {static}
      }
      class UpdateResidentCommandFromResourceAssembler {
        + toCommandFromResource(id: Long, resource: UpdateResidentResource): UpdateResidentCommand {static}
      }
    }

    class ResidentsController {
      - residentCommandServices: ResidentCommandServices
      - residentQueryServices: ResidentQueryServices
      + createResident(resource: CreateResidentResource): ResponseEntity<ResidentResource>
      + updateResident(id: Long, resource: UpdateResidentResource): ResponseEntity<ResidentResource>
      + deleteResident(id: Long): ResponseEntity<Void>
      + getResidentById(id: Long): ResponseEntity<ResidentResource>
      + getResidentByPersonProfileId(personProfileId: Long): ResponseEntity<ResidentResource>
      + getAllResidents(): ResponseEntity<List<ResidentResource>>
    }
  }
}

' ===== Composiciones del Aggregate =====
Resident *-- PersonProfileId
Resident *-- EmergencyContact
Resident *-- LegalRepresentative

' ===== Implementaciones & dependencias =====
ResidentCommandServiceImpl ..|> ResidentCommandServices
ResidentQueryCommandImpl ..|> ResidentQueryServices

ResidentCommandServiceImpl --> ResidentRepository
ResidentCommandServiceImpl --> ExternalProfileService
ResidentQueryCommandImpl --> ResidentRepository

' ===== Repositorio y transformaciones =====
ResidentsController --> ResidentCommandServices
ResidentsController --> ResidentQueryServices
ResidentsController ..> CreateResidentCommandFromResourceAssembler : uses
ResidentsController ..> UpdateResidentCommandFromResourceAssembler : uses
ResidentsController ..> ResidentResourceFromEntityAssembler : uses

CreateResidentCommandFromResourceAssembler ..> CreateResidentResource : transforms
CreateResidentCommandFromResourceAssembler ..> CreateResidentCommand : creates
UpdateResidentCommandFromResourceAssembler ..> UpdateResidentResource : transforms
UpdateResidentCommandFromResourceAssembler ..> UpdateResidentCommand : creates
ResidentResourceFromEntityAssembler ..> Resident : transforms
ResidentResourceFromEntityAssembler ..> ResidentResource : creates
@enduml
